--- a/generator/templates/generator/home.html
+++ b/generator/templates/generator/home.html
@@ -2,20 +2,26 @@
 
 <form action="{% url 'password'%}">
     <select name="length">
-        <option value="6">6 char long</option>
-        <option value="7">7 char long</option>
         <option value="8">8 char long</option>
+        <option value="9">9 char long</option>
+        <option value="10" selected="selected">10 char long</option>
+        <option value="11">11 char long</option>
+        <option value="12">12 char long</option>
     </select>
-
-    <input type="submit" value="Generate Password">
-
-
+<br>
+<input type="checkbox" name="uppercase"> Uppercase
+<br>
+<input type="checkbox" name="numbers"> Numbers
+<br>
+<input type="checkbox" name="special"> Special Character
+<br>
+<input type="submit" value="Generate Password">
 
 </form>
 
+<br>
+<br>
+<br>
 
+<a href="{% url 'about' %}"> About</a>
 
-
-
-
-{{ password }}
