--- a/generator/templates/generator/home.html
+++ b/generator/templates/generator/home.html
@@ -1,3 +1,7 @@
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+
+<div class="container text-center">
 <h1>Password generation</h1>
 
 <form action="{% url 'password'%}">
@@ -7,7 +11,7 @@
         <option value="10" selected="selected">10 char long</option>
         <option value="11">11 char long</option>
         <option value="12">12 char long</option>
-    </select>
+    </select> Length
 <br>
 <input type="checkbox" name="uppercase"> Uppercase
 <br>
@@ -15,13 +19,13 @@
 <br>
 <input type="checkbox" name="special"> Special Character
 <br>
-<input type="submit" value="Generate Password">
+<input type="submit" value="Generate Password" class="btn btn-primary">
 
 </form>
+    <a href="{% url 'about' %}"> About</a>
+</div>
 
-<br>
-<br>
-<br>
 
-<a href="{% url 'about' %}"> About</a>
+
+
 
